wk_taa_taaqa/src/objects/ErrorRecord__c.object
<CustomObject>
    <description>This object will capture the log error while creating or updating any record.</description>
    <fields>
        <fullName>Class__c</fullName>
        <description>The class belong to exception.</description>
        <inlineHelpText>The class belong to exception.</inlineHelpText>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <description>The detail of exception.</description>
        <inlineHelpText>The detail of exception.</inlineHelpText>
        <label>Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>The method belong to exception.</description>
        <inlineHelpText>The method belong to exception.</inlineHelpText>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ErrorRecord</label>
    <nameField>
        <label>ErrorRecord Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ErrorRecords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>